--- a/src/main/resources/templates/items/show-item-page.html
+++ b/src/main/resources/templates/items/show-item-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -7,12 +7,12 @@
 </head>
 <body>
     <p>Displaying item...</p>
-    <p th:text="'Item id:' + ${itemsToShow.id}">Item id:</p>
-    <p th:text="'Item name:' + ${itemsToShow.itemName}">Item name:</p>
-    <p th:text="'Item description:' + ${itemsToShow.description}">Item description:</p>
-    <p th:text="'Item category:' + ${itemsToShow.category}">Item category:</p>
-    <p th:text="'Item price:' + ${itemsToShow.price}">Item price:</p>
-    <p th:text="'Item quantity:' + ${itemsToShow.quantity}">Item quantity:</p>
-    <p th:text="'Item picture:' + ${itemsToShow.picture}">Item picture:</p>
+    <p th:text="'Item id:' + (${itemsToShow.id} ?: 'No id')">Item id:</p>
+    <p th:text="'Item name:' + (${itemsToShow.itemName} ?: 'No item')">Item name:</p>
+    <p th:text="'Item description:' + (${itemsToShow.description} ?: 'No item')">Item description:</p>
+    <p th:text="'Item category:' + (${itemsToShow.category} ?: 'No item')">Item category:</p>
+    <p th:text="'Item price:' + (${itemsToShow.price} ?: 'No item')">Item price:</p>
+    <p th:text="'Item quantity:' + (${itemsToShow.quantity} ?: 'No item')">Item quantity:</p>
+    <p th:text="'Item picture:' + (${itemsToShow.picture} ?: 'No item')">Item picture:</p>
 </body>
 </html>
