--- a/src/main/resources/templates/items/add-edit.html
+++ b/src/main/resources/templates/items/add-edit.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title th:text="${current_operation}">Title</title>
 </head>
 <body>
-<form method="post" action="#"></form>
-    Edit/save item...
+<p th:text="${current_operation}">Operation...</p>
+<form method="post" action="#" th:object="${itemDto}" th:action="@{/item-save}">
+    <label for="itemName">Item Name:</label><br />
+    <input id="itemName" type="text" th:field="*{itemName}"><br/>
+
+    <label for="description">Description:</label><br />
+    <input id="description" type="text" th:field="*{description}"><br/>
+
+    <label for="category">Category:</label><br />
+        <input id="category" type="text" th:field="*{category}"><br/>
+
+    <label for="price">Price:</label><br />
+        <input id="price" type="number" th:field="*{price}"><br/>
+
+    <label for="quantity">Quantity:</label><br />
+        <input id="quantity" type="number" th:field="*{quantity}"><br/>
+    <input type="submit" value="Submit">
+</form>
 </body>
 </html>
