--- a/src/main/resources/templates/items/all-items.html
+++ b/src/main/resources/templates/items/all-items.html
@@ -5,22 +5,23 @@
     <title>Title</title>
 </head>
 <body>
-    <h2>All items</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Item name</th>
-                <th>Price</th>
-                <th>Link</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="item : ${items}">
-                <td th:text="${item.itemName}">Dummy name</td>
-                <td th:text="${item.price}">4000.00</td>
-                <td><a th:href="@{'/items/' + ${item.id}}" href="#">Link to item</a></td>
-            </tr>
-        </tbody>
-    </table>
+<a th:href="@{/add-item}" href="#">Add new Item</a>
+<h2>All items</h2>
+<table>
+    <thead>
+    <tr>
+        <th>Item name</th>
+        <th>Price</th>
+        <th>Link</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="item : ${items}">
+        <td th:text="${item.itemName}">Dummy name</td>
+        <td th:text="${item.price}">4000.00</td>
+        <td><a th:href="@{'/items/' + ${item.id}}" href="#">Link to item</a></td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
