--- a/src/main/resources/templates/items/show-item-page.html
+++ b/src/main/resources/templates/items/show-item-page.html
@@ -15,6 +15,7 @@
     <p th:text="'Item quantity: ' + (${itemsToShow.quantity} ?: 'No item')">Item quantity:</p>
     <p th:text="'Item picture: ' + (${itemsToShow.picture} ?: 'No item')">Item picture:</p>
     <br />
+    <a th:href="@{'/edit-item/' + ${itemsToShow.id}}" href="#">Edit Item</a>
     <a th:href="@{/all-items}" href="#">Return to all items</a>
 </body>
 </html>
