[add] bootstrap 4.5 added, implementing container

--- a/src/main/resources/templates/items/add-edit.html
+++ b/src/main/resources/templates/items/add-edit.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <title th:text="${current_operation}">Title</title>
 </head>
 <body>
+<div class="container">
 <p th:text="${current_operation}">Operation...</p>
 <form method="post" th:object="${itemDto}" th:action="@{/item-save}">
     <input th:field="*{id}" type="hidden">
@@ -26,5 +32,6 @@
 
     <input type="submit" value="Submit">
 </form>
+</div>
 </body>
 </html>
