--- a/src/main/resources/templates/items/show-item-page.html
+++ b/src/main/resources/templates/items/show-item-page.html
@@ -2,10 +2,16 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <title>Display item</title>
 </head>
 <body>
+<div class="container">
     <p>Displaying item...</p>
     <p th:text="'Item id: ' + (${itemsToShow.id} ?: 'No id')">Item id:</p>
     <p th:text="'Item name: ' + (${itemsToShow.itemName} ?: 'No item')">Item name:</p>
@@ -17,5 +23,6 @@
     <br />
     <a th:href="@{'/edit-item/' + ${itemsToShow.id}}" href="#">Edit Item</a>
     <a th:href="@{/all-items}" href="#">Return to all items</a>
+</div>
 </body>
 </html>
