--- a/src/main/resources/templates/exception/error-item-not found.html
+++ b/src/main/resources/templates/exception/error-item-not found.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <title>Something is wrong!!!</title>
 </head>
 <body>
+<div class="container">
     <h1>Something is wrong!!!</h1>
     <h3 th:text="${exc_message}"></h3>
     <a href="#" th:href="@{/all-items}">Back to all-items</a>
+</div>
 </body>
 </html>
