--- a/src/main/resources/templates/items/all-items.html
+++ b/src/main/resources/templates/items/all-items.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>    <title>Title</title>
 </head>
 <body>
+<div class="container">
 <a th:href="@{/add-item}" href="#">Add new Item</a>
 <h2>All items</h2>
 <table>
@@ -23,5 +28,6 @@
     </tr>
     </tbody>
 </table>
+</div>
 </body>
 </html>
